Add exception handler and handle resource not found exception